Fix Z-Indexing on timeline events b/c album art
Zooming album art would clip inappropriately

http://rainwave.cc/forums/viewtopic.php?f=28&t=4973

--- a/static/style5/_timeline.scss
+++ b/static/style5/_timeline.scss
@@ -61,7 +61,7 @@ div.timeline_event {
 	}
 
 	&:hover {
-		z-index: 1;
+		z-index: 20 !important;
 	}
 
 	div.song {
